# LED

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FindCUDAToolkit.cmake  FindGLobes.cmake  FindGSL.cmake  FindOpenBLAS.cmake
data/: CMakeLists.txt
data/prob/: T2Kplot.py
experiments/: CMakeLists.txt
experiments/NOvA_2025.04361/: NOvA_FD_nue_lowEnergy.glb  NOvA_FD_nue_samples_Peripheral.glb  NOvA_FD_numu_samples.glb
experiments/NOvA_2108.08219/: NOvA_FD_nue_samples_Peripheral.glb  NOvA_FD_numu_samples.glb
experiments/T2K_2303.03222/: T2K_anumu_2023.glb  T2K_nue_2023.glb  T2K_numu_2023.glb
experiments/prob test/flux/: T2K_LHC_mode_2018_flux.dat:Zone.Identifier
src/: CMakeLists.txt
src/5d_bulk/: CMakeLists.txt  T2K_Prob.glb  nu5d_mat_osc.c  nu5d_mat_osc.c++  nu5d_mat_osc.h  nu5d_mat_osc_IH.c++  nu5d_mat_osc_NH.c++  test.glb
src/NOvA_2108.08219/: CMakeLists.txt  NOvA_LED_Eventrates.c++  NOvA_LED_Fit.c++  NOvA_LED_Fit_dcp_th23.c++  NOvA_LED_Scan.c++  NOvA_LED_eventrates.c  NOvA_LED_fit_dcp_th23.c++  NOvA_SM_Eventrates.c  NOvA_SM_Eventrates.c++  NOvA_SM_Eventrates.c++~Updated upstream  NOvA_SM_Fit.c++  NOvA_SM_Fit_dcp_th23.c++  NOvA_SM_eventrates.c  NOvA_SM_fit_dcp_th23.c  NOvA_SM_fit_dcp_th23.c++  NOvA_Setup_New.h  NOvA_setup.h  NOvA_sys.h
src/T2K_2303.03222/: CMakeLists.txt  T2K_LED_Eventrates.c++  T2K_LED_Fit.c  T2K_LED_Fit.c++  T2K_LED_Scan.c++  T2K_LED_eventrates.c  T2K_LED_eventrates.c++  T2K_SM_Eventrates.c  T2K_SM_Fit.c  T2K_SM_eventrates.c  T2K_Setup.h  T2K_Sys.h  T2K_setup.h  nu5d_mat_osc.h  sys_T2K.h
src/ledlib/Engine/: ProbabilityEngine.h++
src/ledlib/Engine/CUDA/: CUDAHermDiag.cu  CUDAHermDiag.h++
src/ledlib/IO/: IO.c++  IO.h++
src/probability/: CMakeLists.txt  LEDProbability_NH.c++  NOvA_Prob.glb
